# rrg-server

./: .gitignore  CLAUDE.md  README.md  rrg-sync.sh
.claude/: settings.json  settings.local.json
.claude/hooks/: doc-sync-check.sh
.claude/rules/: doc-sync.md  email.md  network.md
deploy/: .env.example  docker-compose.yml  windmill-docker-compose.yml
docs/: ARCHITECTURE.md  CURRENT_STATE.md  DEPLOYMENT.md  LEAD_CONVERSATION_ENGINE.md  LEAD_INTAKE_PIPELINE.md
docs/mermaid/: layer1_physical.mmd  layer2_services.mmd  layer3_workflows.mmd
docs/plans/: 2026-02-25-claude-md-cleanup-design.md  2026-02-25-claude-md-cleanup-plan.md  2026-02-25-lead-conversation-e2e-design.md  2026-02-25-lead-conversation-e2e-plan.md  (+25 more)
rrg-brochure/: CLAUDE.md  brochure_pdf.py  claude_llm.py  flake.nix  graph.py  photo_scraper.py  photo_search_pdf.py  pyproject.toml  server.py
rrg-brochure/templates/: brochure.html
rrg-claude-endpoint/: CLAUDE.md  server.js
rrg-commercial-pa/: CLAUDE.md  draft_store.py  exhibit_a_helpers.py  flake.nix  graph.py  pa_docx.py  pa_handler.py  provisions.py  pyproject.toml  server.py
rrg-commercial-pa/nix/: fix-pyproject-wheel-compat.patch
rrg-commercial-pa/templates/: commercial_pa.docx
rrg-commercial-pa/tests/: conftest.py  test_draft_store.py  test_graph.py  test_pa_docx.py  test_pa_handler.py  test_provisions.py  test_server.py
rrg-email-assistant/: CLAUDE.md  autofill-dotloop-v2.scpt  autofill-dotloop.py  autofill-dotloop.scpt  autofill-dotloop.sh  email_templates.md
rrg-pnl/: CLAUDE.md  claude_llm.py  flake.nix  graph.py  pnl_handler.py  pnl_pdf.py  pyproject.toml  server.py
rrg-pnl/templates/: pnl.html
rrg-router/: CLAUDE.md  app.py  claude_llm.py  config.py  flake.nix  graph.py  node_client.py  pyproject.toml  signal_client.py  state.py  windmill_client.py
tests/: test_parse_name_field.py
windmill/: sync-pull.sh  wmill-lock.yaml  wmill.yaml
windmill-mcp/: package-lock.json  package.json
windmill-mcp/src/: index.ts
windmill-worker/: flake.nix
(+62 files in other folders)
