[tool.poetry]
name = "rrg-commercial-pa"
version = "0.1.0"
description = "RRG Commercial PA Microservice — conversational purchase agreement generator"
authors = ["Jake Phillips"]

[tool.poetry.dependencies]
python = "^3.12"
flask = ">=3.0"
langgraph = ">=0.2"
langchain-core = ">=0.3"
docxtpl = ">=0.18"
python-docx = ">=1.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
